Address code review feedback: improve thread safety and error message clarity
Co-authored-by: adam133 <20442729+adam133@users.noreply.github.com>